--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "license": "ISC",
   "dependencies": {
     "chokidar": "^3.3.1",
+    "cli-spinner": "^0.2.10",
+    "colors": "^1.4.0",
     "eslint": "^6.8.0",
     "npm": "^6.13.7",
     "react-redux": "^7.2.0",
